More changes to support local environment variables
git-svn-id: https://svn.cms.waikato.ac.nz/svn/weka/branches/stable-3-6@4985 e0a1b77d-ad91-4216-81b1-defd5f83fa92